fixed alignment issues

--- a/src/Section_6.css
+++ b/src/Section_6.css
@@ -1,6 +1,6 @@
 .section-6 {
   width: 100%;
-  position: relative;
+  /* position: relative; */
   margin-top: 250px;
   border-image: linear-gradient(
       to right,
